# heart-protectors

./: .gitignore  README.md  py.py  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py
data/: download_kaggle_data.py
paper/: protector.aux  protector.fdb_latexmk  protector.fls  protector.out  protector.tex
src/: trainer.py
src/models/: model_pca.py  model_rf.py  model_svm.py
src/models/dt/: dt.py
src/models/knn/: model_knn.py  other_knn.py
src/models/nn/: heart.csv  model_nn.py  requirements.txt
src/models/svm/: model_svm.py
src/preprocessing/: preprocess.py
src/process/: process.py
src/visualization/: visualize.py
