[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-project"
version = "0.1.0"
description = "Data analysis research project"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Research Team" }]

dependencies = [
  # Core Data Science
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.6.0",
  "scipy>=1.13.0",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.0",

  # NLP & Text Processing
  "nltk>=3.9.0",
  "gensim>=4.3.0",
  "regex>=2024.0.0",

  # Image Processing
  "pillow>=11.0.0",
  "opencv-python-headless>=4.11.0",
  "scikit-image>=0.25.0",
  "pytesseract>=0.3.0",

  # Utilities
  "tqdm>=4.67.0",
  "joblib>=1.4.0",
  "protobuf>=6.30.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.13.0",
  "kaggle>=1.7.0",

  # Development & Testing
  "pytest>=7.4.0",

  # Jupyter Environment
  "jupyter>=1.0.0",
  "notebook>=7.0.0",
  "ipykernel>=6.25.0",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "mypy", "pip-tools"]

[project.scripts]
research-cli = "scripts:main"

# development
[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.setuptools]
py-modules = []
